fix unary parsing and sums and add limits and align* and stuff

--- a/src/mathquill/mathquill.css
+++ b/src/mathquill/mathquill.css
@@ -619,3 +619,49 @@
 :where(.mq-math-mode .mq-dual-denominator.mq-empty) {
   background: var(--z-mq-empty);
 }
+:where(.mq-math-mode .mq-limit) {
+  padding: 0 0.2em;
+  text-align: center;
+  display: inline-block;
+}
+:where(.mq-math-mode .mq-limit-label) {
+  display: block;
+  width: 100%;
+}
+:where(.mq-math-mode .mq-limit-sub) {
+  float: right;
+  display: block;
+  width: 100%;
+  font-size: 80%;
+}
+:where(.mq-math-mode .mq-limit) {
+  padding: 0 0.2em;
+  text-align: center;
+  display: inline-block;
+}
+:where(.mq-math-mode .mq-limit-label) {
+  display: block;
+  width: 100%;
+}
+:where(.mq-math-mode .mq-limit-sub) {
+  float: right;
+  display: block;
+  width: 100%;
+  font-size: 80%;
+}
+:where(.mq-math-mode .mq-align) {
+  padding: 0 0.2em;
+  text-align: center;
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  align-items: baseline;
+  gap: 0.2em 0;
+}
+:where(.mq-math-mode .mq-align-item) {
+}
+:where(.mq-math-mode .mq-align-1) {
+  text-align: right;
+}
+:where(.mq-math-mode .mq-align-2) {
+  text-align: left;
+}
